Creado mediante Colaboratory

--- a/Controles/Control 3.ipynb
+++ b/Controles/Control 3.ipynb
@@ -1796,15 +1796,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "FZmGvze__Ytj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## Importante:\n",
@@ -1817,13 +1808,33 @@
     {
       "cell_type": "code",
       "source": [
-        "# Aquí escribe el código para crear el índice de texto\n"
+        "# Aquí escribe el código para crear el índice de texto\n",
+        "collection.create_index([('moves', 'text')])"
       ],
       "metadata": {
-        "id": "sGsiV5cux195"
+        "id": "sGsiV5cux195",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ccdcdec7-e3c0-4514-cc46-1c3c6014a975"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'moves_text'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 90
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1837,12 +1848,84 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Indexes = set()\n",
+        "#{'Column1': {'$in': value_list}}\n",
+        "for pokemon in collection.find({'$text': {'$search': '\\\"fire\\\" \\\"thunder\\\"'}}):\n",
+        "    Indexes.add(pokemon['pokemon_id'])"
+      ],
       "metadata": {
         "id": "CiYsZtaiybPR"
       },
-      "execution_count": null,
+      "execution_count": 96,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Filtered_Pokedex = Pokedex[Pokedex['Id'].isin(Indexes)]\n",
+        "respuesta_5 = Filtered_Pokedex[(Filtered_Pokedex['Sp. Attack'] >= 110) & (Filtered_Pokedex['Sp. Attack'] <= 130)]['Name']"
+      ],
+      "metadata": {
+        "id": "rTT08S3c_uWV",
+        "outputId": "6187a278-d648-418a-a6fa-3f5f6178a2aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "81      Magneton\n",
+              "144       Zapdos\n",
+              "180     Ampharos\n",
+              "228     Houndoom\n",
+              "242       Raikou\n",
+              "372    Salamence\n",
+              "461    Magnezone\n",
+              "466    Magmortar\n",
+              "Name: Name, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'Nombres validos: \\n{respuesta_5}')"
+      ],
+      "metadata": {
+        "id": "AQqM2Ax2A2jr",
+        "outputId": "8ce2c9b9-f74d-4dbb-9e72-35ca9e5b7ea1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombres validos: \n",
+            "81      Magneton\n",
+            "144       Zapdos\n",
+            "180     Ampharos\n",
+            "228     Houndoom\n",
+            "242       Raikou\n",
+            "372    Salamence\n",
+            "461    Magnezone\n",
+            "466    Magmortar\n",
+            "Name: Name, dtype: object\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
