--- a/Controles/Control 3.ipynb
+++ b/Controles/Control 3.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Fernanda-Bley/Control-3/blob/main/Controles/Control%203.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -1867,11 +1878,11 @@
         "respuesta_5 = Filtered_Pokedex[(Filtered_Pokedex['Sp. Attack'] >= 110) & (Filtered_Pokedex['Sp. Attack'] <= 130)]['Name']"
       ],
       "metadata": {
-        "id": "rTT08S3c_uWV",
-        "outputId": "6187a278-d648-418a-a6fa-3f5f6178a2aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rTT08S3c_uWV",
+        "outputId": "6187a278-d648-418a-a6fa-3f5f6178a2aa"
       },
       "execution_count": 101,
       "outputs": [
@@ -1901,11 +1912,11 @@
         "print(f'Nombres validos: \\n{respuesta_5}')"
       ],
       "metadata": {
-        "id": "AQqM2Ax2A2jr",
-        "outputId": "8ce2c9b9-f74d-4dbb-9e72-35ca9e5b7ea1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AQqM2Ax2A2jr",
+        "outputId": "8ce2c9b9-f74d-4dbb-9e72-35ca9e5b7ea1"
       },
       "execution_count": 102,
       "outputs": [
@@ -1939,12 +1950,384 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Estadisticas = Pokedex[['Attack', 'Sp. Attack', 'Defense', 'Sp. Defense', 'Speed', 'HP']].sum(axis=1)\n",
+        "Pokedex['Estadistics'] = Estadisticas"
+      ],
       "metadata": {
         "id": "Uwssos-aycNj"
       },
-      "execution_count": null,
+      "execution_count": 105,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Indexes_2 = set()\n",
+        "for pokemon in collection.find({'$text': {'$search': 'ice, freeze, snow, cold -water -wind'}}):\n",
+        "    Indexes_2.add(pokemon['pokemon_id'])\n",
+        "Filtered_Pokedex = Pokedex[Pokedex['Id'].isin(Indexes_2)]"
+      ],
+      "metadata": {
+        "id": "ct8IYxjIBb4y"
+      },
+      "execution_count": 107,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "respuesta_6 = Filtered_Pokedex[['Name', 'Estadistics']].sort_values('Name')"
+      ],
+      "metadata": {
+        "id": "HqYq0TSNBuzM"
+      },
+      "execution_count": 109,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "respuesta_6"
+      ],
+      "metadata": {
+        "id": "VCv24nwOCD8N",
+        "outputId": "8de25fb3-afcc-4082-dfcb-54a5fff511fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
+      },
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "             Name  Estadistics\n",
+              "141    Aerodactyl          515\n",
+              "23          Arbok          448\n",
+              "793      Buzzwole          570\n",
+              "317      Carvanha          305\n",
+              "739  Crabominable          478\n",
+              "84         Dodrio          470\n",
+              "451       Drapion          500\n",
+              "50        Dugtrio          425\n",
+              "355      Dusclops          455\n",
+              "476      Dusknoir          525\n",
+              "294       Exploud          490\n",
+              "648      Genesect          600\n",
+              "471       Gliscor          510\n",
+              "209      Granbull          450\n",
+              "449     Hippowdon          525\n",
+              "106    Hitmonchan          455\n",
+              "634     Hydreigon          600\n",
+              "123          Jynx          455\n",
+              "81       Magneton          465\n",
+              "461     Magnezone          535\n",
+              "472     Mamoswine          530\n",
+              "801     Marshadow          600\n",
+              "307      Medicham          410\n",
+              "261     Mightyena          420\n",
+              "136       Porygon          395\n",
+              "473     Porygon-Z          535\n",
+              "232      Porygon2          515\n",
+              "475     Probopass          525\n",
+              "485     Regigigas          670\n",
+              "318      Sharpedo          460\n",
+              "237      Smoochum          305\n",
+              "208      Snubbull          300\n",
+              "207       Steelix          510\n",
+              "507     Stoutland          500\n",
+              "247     Tyranitar          600"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-71a6bfed-bba5-4f6f-a2cd-59cad452ea3d\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Estadistics</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>141</th>\n",
+              "      <td>Aerodactyl</td>\n",
+              "      <td>515</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>23</th>\n",
+              "      <td>Arbok</td>\n",
+              "      <td>448</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>793</th>\n",
+              "      <td>Buzzwole</td>\n",
+              "      <td>570</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>317</th>\n",
+              "      <td>Carvanha</td>\n",
+              "      <td>305</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>739</th>\n",
+              "      <td>Crabominable</td>\n",
+              "      <td>478</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>84</th>\n",
+              "      <td>Dodrio</td>\n",
+              "      <td>470</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>451</th>\n",
+              "      <td>Drapion</td>\n",
+              "      <td>500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50</th>\n",
+              "      <td>Dugtrio</td>\n",
+              "      <td>425</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>355</th>\n",
+              "      <td>Dusclops</td>\n",
+              "      <td>455</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>476</th>\n",
+              "      <td>Dusknoir</td>\n",
+              "      <td>525</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>294</th>\n",
+              "      <td>Exploud</td>\n",
+              "      <td>490</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>648</th>\n",
+              "      <td>Genesect</td>\n",
+              "      <td>600</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>471</th>\n",
+              "      <td>Gliscor</td>\n",
+              "      <td>510</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>209</th>\n",
+              "      <td>Granbull</td>\n",
+              "      <td>450</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>449</th>\n",
+              "      <td>Hippowdon</td>\n",
+              "      <td>525</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>106</th>\n",
+              "      <td>Hitmonchan</td>\n",
+              "      <td>455</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>634</th>\n",
+              "      <td>Hydreigon</td>\n",
+              "      <td>600</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>123</th>\n",
+              "      <td>Jynx</td>\n",
+              "      <td>455</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>81</th>\n",
+              "      <td>Magneton</td>\n",
+              "      <td>465</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>461</th>\n",
+              "      <td>Magnezone</td>\n",
+              "      <td>535</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>472</th>\n",
+              "      <td>Mamoswine</td>\n",
+              "      <td>530</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>801</th>\n",
+              "      <td>Marshadow</td>\n",
+              "      <td>600</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>307</th>\n",
+              "      <td>Medicham</td>\n",
+              "      <td>410</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>261</th>\n",
+              "      <td>Mightyena</td>\n",
+              "      <td>420</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>136</th>\n",
+              "      <td>Porygon</td>\n",
+              "      <td>395</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>473</th>\n",
+              "      <td>Porygon-Z</td>\n",
+              "      <td>535</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>232</th>\n",
+              "      <td>Porygon2</td>\n",
+              "      <td>515</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>475</th>\n",
+              "      <td>Probopass</td>\n",
+              "      <td>525</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>485</th>\n",
+              "      <td>Regigigas</td>\n",
+              "      <td>670</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>318</th>\n",
+              "      <td>Sharpedo</td>\n",
+              "      <td>460</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>237</th>\n",
+              "      <td>Smoochum</td>\n",
+              "      <td>305</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>208</th>\n",
+              "      <td>Snubbull</td>\n",
+              "      <td>300</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>207</th>\n",
+              "      <td>Steelix</td>\n",
+              "      <td>510</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>507</th>\n",
+              "      <td>Stoutland</td>\n",
+              "      <td>500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>247</th>\n",
+              "      <td>Tyranitar</td>\n",
+              "      <td>600</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-71a6bfed-bba5-4f6f-a2cd-59cad452ea3d')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-71a6bfed-bba5-4f6f-a2cd-59cad452ea3d button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-71a6bfed-bba5-4f6f-a2cd-59cad452ea3d');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 110
+        }
+      ]
     }
   ]
 }
